# imap-email-attachment-processor

./: .gitignore  README.md  pyproject.toml
src/email_file_monitoring/: NexusFilesProcessing_email_rules.json  connection.ini  default_email_rules.json  imap_accounts.json  imap_accounts_local.json  main.py
src/email_file_monitoring/utils/: password.py
