[tool.poetry]
name = "email-file-monitoring"
version = "0.1.0"
description = ""
authors = ["James Larsen <James.Larsen42@gmail.com>"]
readme = "README.md"
packages = [{include = "email_file_monitoring", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
keyring = "^23.13.1"
configparser = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
